Rename to MarkdownEditingOnly

--- a/messages/2.0.2.md
+++ b/messages/2.0.2.md
@@ -1,6 +1,6 @@
-# MarkdownEditing 2.0.2 Changelog
+# MarkdownEditingOnly 2.0.2 Changelog
 
-Your _MarkdownEditing_ plugin is updated. Enjoy new version. For any type of feedback you can use [GitHub issues][issues].
+Your _MarkdownEditingOnly_ plugin is updated. Enjoy new version. For any type of feedback you can use [GitHub issues][issues].
 
 ## New Features
 
@@ -13,4 +13,4 @@ Your _MarkdownEditing_ plugin is updated. Enjoy new version. For any type of fee
     - `me_keep_centered`          -> `mde_keep_centered`
     - `me_distraction_free_mode`  -> `mde_distraction_free_mode`
 
-[issues]: https://github.com/SublimeText-Markdown/MarkdownEditing/issues
+[issues]: https://github.com/SublimeText-Markdown/MarkdownEditingOnly/issues
