--- a/messages/2.0.3.md
+++ b/messages/2.0.3.md
@@ -1,6 +1,6 @@
-# MarkdownEditing 2.0.3 Changelog
+# MarkdownEditingOnly 2.0.3 Changelog
 
-Your _MarkdownEditing_ plugin is updated. Enjoy new version. For any type of feedback you can use [GitHub issues][issues].
+Your _MarkdownEditingOnly_ plugin is updated. Enjoy new version. For any type of feedback you can use [GitHub issues][issues].
 
 ## Bug Fixes
 
@@ -22,6 +22,6 @@ Your _MarkdownEditing_ plugin is updated. Enjoy new version. For any type of fee
     - `macros/Make Word Bold.sublime-macro`     -> `macros/Transform Word - Bold.sublime-macro`
     - `macros/Make Word Italic.sublime-macro`   -> `macros/Transform Word - Italic.sublime-macro`
 
-[issues]: https://github.com/SublimeText-Markdown/MarkdownEditing/issues
-[#111]: https://github.com/SublimeText-Markdown/MarkdownEditing/issues/111
-[#112]: https://github.com/SublimeText-Markdown/MarkdownEditing/issues/112
+[issues]: https://github.com/SublimeText-Markdown/MarkdownEditingOnly/issues
+[#111]: https://github.com/SublimeText-Markdown/MarkdownEditingOnly/issues/111
+[#112]: https://github.com/SublimeText-Markdown/MarkdownEditingOnly/issues/112
