--- a/messages/2.0.4.md
+++ b/messages/2.0.4.md
@@ -1,6 +1,6 @@
-# MarkdownEditing 2.0.4 Changelog
+# MarkdownEditingOnly 2.0.4 Changelog
 
-Your _MarkdownEditing_ plugin is updated. Enjoy new version. For any type of feedback you can use [GitHub issues][issues].
+Your _MarkdownEditingOnly_ plugin is updated. Enjoy new version. For any type of feedback you can use [GitHub issues][issues].
 
 ## Bug Fixes
 
@@ -48,5 +48,5 @@ Your _MarkdownEditing_ plugin is updated. Enjoy new version. For any type of fee
     * `mde_keep_centered`             -> `mde.keep_centered`
     * `mde_distraction_free_mode`     -> `mde.distraction_free_mode`
 
-[issues]: https://github.com/SublimeText-Markdown/MarkdownEditing/issues
-[#109]: https://github.com/SublimeText-Markdown/MarkdownEditing/issues/109
+[issues]: https://github.com/SublimeText-Markdown/MarkdownEditingOnly/issues
+[#109]: https://github.com/SublimeText-Markdown/MarkdownEditingOnly/issues/109
