--- a/messages/2.0.1.md
+++ b/messages/2.0.1.md
@@ -10,6 +10,6 @@ Your _MarkdownEditingOnly_ plugin is updated. Enjoy new version. For any type of
 ## New Features
 
 * Markdown headers will be displayed in the Project Symbol List (<kbd>Ctrl</kbd> <kbd>Shift</kbd> <kbd>R</kbd>). They will start with `#`, so you will know they belong to markdown files at a glance. Also they will be on top of the list because of the presedence of `#`.
-* Bold and italic markers are configurable now. Follow `Preferences > Package Settings > Markdown Editing` in the menu. See README for further help.
+* Bold and italic markers are configurable now. Follow `Preferences > Package Settings > Markdown Editing Only` in the menu. See README for further help.
 
 [issues]: https://github.com/SublimeText-Markdown/MarkdownEditingOnly/issues
